named the project

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Put Game Name Here </title>
+        <title> Mensa Club </title>
         <link href="game.css" rel="stylesheet">
         <link herf="logo.png" rel="logo" type="image">
         <nav>
