--- a/header.html
+++ b/header.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title> Mensa Club </title>
+        <link href="header.css" rel="stylesheet">
+        <div class="header">
+        	<img src="logo.png" alt="logo" height="30" width="30">
+        </div>
         <link href="game.css" rel="stylesheet">
         <link herf="logo.png" rel="logo" type="image">
         <nav>
             <a href="inserthomepage.php"> insert image of a home/small quiz logo or something</a>
         </nav>
+
+        
     </head>
