--- a/header.html
+++ b/header.html
@@ -2,15 +2,13 @@
 <html>
     <head>
         <title> Mensa Club </title>
-        <link href="header.css" rel="stylesheet">
-        <div class="header">
-        	<img src="logo.png" alt="logo" height="30" width="30">
-        </div>
-        <link href="game.css" rel="stylesheet">
+        <!-- <link href="header.css" rel="stylesheet"> -->
+        <link href="signin.css" rel="stylesheet">
         <link herf="logo.png" rel="logo" type="image">
-        <nav>
-            <a href="inserthomepage.php"> insert image of a home/small quiz logo or something</a>
-        </nav>
 
-        
     </head>
+    <body>
+        <div class="header">
+            <img src="logo.png" alt="logo" height="40" width="40">
+        </div>
+        <h1>Mensa Club</h1>
