--- a/homepage.html
+++ b/homepage.html
@@ -17,19 +17,16 @@
   			<a href="#">About Us</a>
 		</div>
 
-		<aside id="Table">
+		<div id="menu">
 			<center><h3>Table of Contents</h3></center>
-			<a href="#How you have to qualify"><p>How you have to qualify</p></a>
-			<a href="#What"><p>What do our tests consist of?</p></a>
-			<a href="#pasta"><p>Test Levels</p></a>
-			<a > <p class="index">1</p></a>
-			<a> <p class="index">2</p></a>
-			<a> <p class="index">3</p></a>
-			<a> <p class="index">4</p></a>
-			<a> <p class="index">5</p></a>
-			<a> <p class="index">6</p></a>
-
-		</aside>
+			<a href="#" style="text-decoration:none"><p>Test Levels</p></a>
+			<a href="#" style="text-decoration:none"><p class="index">1</p></a>
+			<a href="#" style="text-decoration:none"><p class="index">2</p></a>
+			<a href="#" style="text-decoration:none"><p class="index">3</p></a>
+			<a href="#" style="text-decoration:none"><p class="index">4</p></a>
+			<a href="#" style="text-decoration:none"><p class="index">5</p></a>
+			<a href="#" style="text-decoration:none"><p class="index">6</p></a>
+		</div>
 
 
 		<div class="card">
