--- a/signin.html
+++ b/signin.html
@@ -3,6 +3,8 @@
     <head>
         <title> Mensa Club </title>
         <link href="signin.css" rel="stylesheet">
+    </head>
+    <body>    
         <div class="header">
         	<img src="logo.png" alt="logo" height="40" width="40">
         </div>
@@ -26,4 +28,4 @@
         	</form>     
         </div>
         <?php include("footer.html"); ?>
-</head>
+	</body>
