--- a/homepage.html
+++ b/homepage.html
@@ -12,14 +12,14 @@
 		</div>
 
 		<div class="navbar">
-  			<a href="#">Take Our Tests</a>
-  			<a href="#">History</a>
+  			<a href="tests.html">Take Our Tests</a>
+  			<a href="#">Leader Board</a>
   			<a href="#">About Us</a>
 		</div>
 
 		<div id="menu">
 			<center><h3>Table of Contents</h3></center>
-			<a href="#" style="text-decoration:none"><p>Test Levels</p></a>
+			<p style="text-indent: 10px;">Test Levels</p>
 			<a href="#" style="text-decoration:none"><p class="index">1</p></a>
 			<a href="#" style="text-decoration:none"><p class="index">2</p></a>
 			<a href="#" style="text-decoration:none"><p class="index">3</p></a>
@@ -35,7 +35,7 @@
       			</center>
       		<br>
       		<br>
-      		<b><h2>How you have to qualify</h2></b>
+      		<b><h2>How you qualify</h2></b>
       		<p>Mensa is the largest and oldest high IQ society in the world. It is a non-profit organization open to people who score at the 98th percentile or higher on a standardised, supervised IQ or other approved intelligence test.</p>
       		<h2>What do our tests consist of?</h2>
       		<p>6 levels of difficulty that test for comprehension, attention, and reasoning skills. An intelligence quotient is a total score derived from a set of standardized tests or subtests designed to assess human intelligence. The abbreviation "IQ" was coined by the psychologist William Stern for the German term Intelligenzquotient, his term for a scoring method for intelligence tests at University of Breslau he advocated in a 1912 book. Historically, IQ was a score obtained by dividing a person's mental age score, obtained by administering an intelligence test, by the person's chronological age, both expressed in terms of years and months. The resulting fraction was multiplied by 100 to obtain the IQ score. For modern IQ tests, the raw score is transformed to a normal distribution with mean 100 and standard deviation 15. This results in approximately two-thirds of the population scoring between IQ 85 and IQ 115 and about 2.5 percent each above 130 and below 70. Scores from intelligence tests are estimates of intelligence.</p>
