--- a/tests.html
+++ b/tests.html
@@ -6,42 +6,42 @@
   </head> 
   <body>
     <div class="header">
-      <img class="float" src="logo.png" alt="logo" height="80" width="80" >
-      <h1>Mensa Club</h1>
+      <a href="homepage.html"><img class="float" src="logo.png" alt="logo" height="80" width="80" ></a>
+      <center><h1 style="color:white">Mensa Club</h1></center>
     </div>
 
     <div class="navbar">
         <a href="#">Take Our Tests</a>
-        <a href="#">History</a>
+        <a href="#">Leader Board</a>
         <a href="#">About Us</a>
     </div>
 
     <div class="row">
-     <div class="column">
+     <div style="background-color: white" class="column">
       <h2>Test 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+      <p></p>
     </div>
   
-    <div class="column">
+    <div style="background-color: white" class="column">
      <h2>Test 2</h2>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+     <p><p>
     </div>
   
-    <div class="column">
+    <div style="background-color: white" class="column">
       <h2>Test 3</h2>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+     <p></p>
     </div>
-    <div class="column">
+    <div style="background-color: white" class="column">
       <h2>Test 4</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+      <p></p>
     </div>
-    <div class="column">
+    <div style="background-color: white" class="column">
       <h2>Test 5</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+      <p></p>
     </div>
-    <div class="column">
+    <div style="background-color: white" class="column">
       <h2>Test 6</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+      <p></p>
     </div>
 </div>
 </body>
