--- a/homepage.html
+++ b/homepage.html
@@ -20,12 +20,12 @@
 		<div id="menu">
 			<center><h3>Table of Contents</h3></center>
 			<p style="text-indent: 10px;">Test Levels</p>
-			<a href="#" style="text-decoration:none"><p class="index">1</p></a>
-			<a href="#" style="text-decoration:none"><p class="index">2</p></a>
-			<a href="#" style="text-decoration:none"><p class="index">3</p></a>
-			<a href="#" style="text-decoration:none"><p class="index">4</p></a>
-			<a href="#" style="text-decoration:none"><p class="index">5</p></a>
-			<a href="#" style="text-decoration:none"><p class="index">6</p></a>
+			<a href="difficulty1.php" style="text-decoration:none"><p class="index">1</p></a>
+			<a href="difficulty2.php" style="text-decoration:none"><p class="index">2</p></a>
+			<a href="difficulty3.php" style="text-decoration:none"><p class="index">3</p></a>
+			<a href="difficulty4.php" style="text-decoration:none"><p class="index">4</p></a>
+			<a href="difficulty5.php" style="text-decoration:none"><p class="index">5</p></a>
+			<a href="difficulty6.php" style="text-decoration:none"><p class="index">6</p></a>
 		</div>
 
 
