lots of cahnges

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> Leaderboard </title>
-		<link href="leaderboard_style.css" rel="stylesheet">
+		<link href="testsAndBoard.css" rel="stylesheet">
 	</head>
 
 	<body>
