--- a/tests.html
+++ b/tests.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Tests</title>
-    <link href="tests.css" rel="stylesheet">
+    <link href="testsAndBoard.css" rel="stylesheet">
   </head> 
   <body>
     <div class="header">
