--- a/header.html
+++ b/header.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <div class="header">
-            <img src="logo.png" alt="logo" height="40" width="40">
+            <a href="homepage.php" > <img src="logo.png" alt="logo" height="40" width="40"> </a>
         </div>
         <h1>Mensa Club</h1>
